--- a/config/secrets/.env.development
+++ b/config/secrets/.env.development
@@ -2,6 +2,10 @@
 NODE_ENV=development
 PORT=5000
 APPLICATION_NAME=AI-Driven-News-Intelligence-Server-Development
+API_PREFIX=/api
+SWAGGER_API_PATH=/api/docs
+CORS_ORIGINS=*
+# CORS_ORIGINS=http://localhost:3000,http://localhost:3001
 
 # Throttler (Rate Limiter)
 RATE_LIMITER_LIMIT=100
@@ -19,27 +23,5 @@ MONGO_EXPRESS_PORT=8081
 DEFAULT_TIMEZONE=Asia/Karachi
 LOCAL_TIME_FORMAT=YYYY-MM-DD HH:mm:ss z
 
-# n8n Config
-N8N_DB_NAME=n8n_data
-N8N_DB_URI=mongodb://root:rootpassword@ai_news_mongodb:27017/n8n_data?authSource=admin
-N8N_BASIC_AUTH_ACTIVE=true
-N8N_BASIC_AUTH_USER=admin
-N8N_BASIC_AUTH_EMAIL=admin@localhost.dev
-N8N_BASIC_AUTH_PASSWORD=Admin@123
-N8N_PORT=8089
-N8N_PROTOCOL=http
-N8N_HOST=localhost
-N8N_PATH=/
-N8N_EDITOR_BASE_URL=http://localhost:8089
-N8N_ENCRYPTION_KEY=supersecretlocalkey
-N8N_DIAGNOSTICS_ENABLED=false
-N8N_PERSONALIZATION_ENABLED=false
-N8N_VERSION_NOTIFICATIONS_ENABLED=false
-N8N_METRICS_ENABLED=false
-N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
-N8N_RUNNERS_ENABLED=true
-N8N_BLOCK_ENV_ACCESS_IN_NODE=false
-N8N_GIT_NODE_DISABLE_BARE_REPOS=true
-
 # N8N_WEBHOOK
-N8N_WEBHOOK_URL=http://localhost:8089/webhook
+N8N_WEBHOOK_URL=http://localhost:5678/webhook
